# xkeyboard-config

./: .cvsignore  .gitignore  AUTHORS  BUGS  CREDITS  ChangeLog  Makefile.am  NEWS  README  README.config  README.enhancing  TODO  autogen.sh  autogen_gnome.sh  configure.ac  configure.in  meson.build  xfree86.xml.in  xfree86_xkb_xml.spec.in  xkbdesc.spec.in  xkbrules.am  xkeyboard-config.spec.in
compat/: .cvsignore  Makefile.am  basic  caps  complete  default  iso9995  japan  ledcaps  lednum  ledscroll  level5  misc  mousekeys  olpc  pc  pc98  xfree86  xorg  xtest
compiled/: Makefile.am
debian/: changelog  control  rules  watch
debian/patches/: revert-indic-blacklist.diff  series
docs/: Makefile.am  README.enhancing  README.symbols  iso3166.csv  iso3166.txt  iso639.csv  iso639.txt
geometry/: .cvsignore  Makefile.am  hhk  hp  hpmini  macintosh  microsoft  pc  sun
geometry/digital_vndr/: Makefile.am  pc
geometry/ibm.vndr/: Makefile.am  thinkpad
geometry/ibm_vndr/: Makefile.am  thinkpad
geometry/sgi.vndr/: Makefile.am
geometry/sgi_vndr/: Makefile.am
keycodes/: .cvsignore  Makefile.am  evdev  macintosh  olpc  sun  xfree86
keycodes/digital.vndr/: Makefile.am  pc
keycodes/digital_vndr/: Makefile.am  lk
keycodes/sgi.vndr/: indy  iris
keycodes/sgi_vndr/: Makefile.am  indigo
keymap/: .cvsignore  Makefile.am  macintosh  sony  xfree98
keymap/digital.vndr/: Makefile.am
keymap/digital_vndr/: Makefile.am  us
keymap/sgi.vndr/: Makefile.am  ch  cz  dk  dvorak  en_US  gb  pl  se  th
keymap/sgi_vndr/: Makefile.am  be  bg  ca  cz  de  en_US  es  fi  fr  hu  it  jp  no  pt  ru  sk  th  us
keymap/sun.vndr/: fi  se  uk  us
keymap/sun_vndr/: Makefile.am  de  es  fr  no  pl  ru
po/: .cvsignore  ChangeLog  Makefile.am  POTFILES.in  af.po  az.po  bg.po  ca.po  crh.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  fi.po  fr.po  fur.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  ky.po  lt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  rw.po  sk.po  sl.po  sq.po  (+10 more)
rules/: .cvsignore  0001-lists.part  0013-ml_s.part  0026-base.m_s.part  0026-evdev.m_s.part  0042-o_s.part  HDR  Makefile.am  base  base-it.lst  base.extras.xml  base.extras.xml.in  base.l1_k.part  base.l2_s.part  base.l3_s.part  base.l4_s.part  base.l_k.part  base.lists.part  base.lst  base.m_g.part  base.m_k.part  base.m_s.part  base.m_t.part  base.ml1_c.part  base.ml1_s.part  base.ml_c.part  base.ml_g.part  base.ml_s.part  base.mlv_s.part  base.mvl_s.part  base.o_c.part  base.o_s.part  base.o_t.part  base.xml  base.xml.in  evdev.m_k.part  evdev.m_s.part  evdev.xml.in  merge.sh  sgi  (+3 more)
rules/compat/: .cvsignore  Makefile.am  base.lists.part  l2_s.sh  l3_s.sh  l4_s.sh  layoutRename.lst  layoutsMapping.lst  ln_s.sh  lnv_s.sh  ml1_s.sh  ml1v1_s.sh  ml1v_s.sh  ml_s.sh  mlv_s.sh  variantRename.lst
rules/extras/: variantsMapping.lst
semantics/: .cvsignore  Makefile.am
symbols/: .cvsignore  Makefile.am  af  al  altwin  am  apl  ar  ara  az  ba  bd  be  ben  bg  br  braille  bt  by  ca  capslock  cd  ch  compose  cs  ctrl  cz  cz_qwerty  de  deva  div  dk  dvorak  dzo  ee  el  en_US  epo  es  et  (+109 more)
symbols/digital.vndr/: Makefile.am  pc  us
symbols/digital_vndr/: Makefile.am  lk  vt
symbols/extras/: Makefile.am  apl  ru  us
symbols/fujitsu_vndr/: Makefile.am  jp
symbols/hp.vndr/: Makefile.am
symbols/hp_vndr/: Makefile.am
symbols/macintosh.vndr/: Makefile.am  ch  fi  pt
symbols/macintosh_vndr/: Makefile.am  apple  ch  de  dk  es  fi  fr  gb  is  it  latam  nl  no  pt  se  us
symbols/nec.vndr/: Makefile.am
symbols/nec_vndr/: Makefile.am
symbols/planet_vndr/: Makefile.am  Makefile.in  astro  cosmo  gemini
symbols/sgi_vndr/: Makefile.am
symbols/sony.vndr/: Makefile.am
symbols/sony_vndr/: Makefile.am
symbols/sun.vndr/: Makefile.am
symbols/sun_vndr/: Makefile.am  nl  se  us
symbols/xfree68_vndr/: Makefile.am
tests/: genLists4Comparizon.sh  listCI2.xsl  listCIs.xsl  testLayouts.pl  testModels.pl  testOptions.pl  xkbTestFunc.pm
tests/mxkbledpanel/: .cvsignore  Imakefile
tests/ruby/: find_match.rb  xkbparser.rb
types/: .cvsignore  Makefile.am  basic  caps  complete  default  extra  level5  nokia  numpad  pc
xslt/: reg2ll.xsl  xfree86.xsl
