AC_INIT(rules/base.xml.in)

PACKAGE=xkeyboard-config
GETTEXT_PACKAGE=$PACKAGE
MAJOR_VERSION=0
MINOR_VERSION=1
VERSION=$MAJOR_VERSION.$MINOR_VERSION

AC_SUBST(MAJOR_VERSION)
AC_SUBST(MINOR_VERSION)
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(GETTEXT_PACKAGE)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

prefix=/usr

AC_ARG_WITH( xkb_base,
             [  --with-xkb-base=DIR        XKB base path (by default it is /usr/X11R6/lib/X11/xkb)],
             xkb_base="$withval", 
             xkb_base="\$(prefix)/X11R6/lib/X11/xkb" )

AC_ARG_WITH( xkb_rules_symlink,
             [  --with-xkb-rules-symlink=NAME        create symlink to "old style" rules files (xfree86 or xorg)],
             xkb_rules_symlink="$withval" )

AM_CONDITIONAL(CREATE_RULES_SYMLINK, test "x$xkb_rules_symlink" != "x")

ALL_LINGUAS="af az bg cs da fr hu nl ru sk sq sr sv tr uk zh_CN"

AM_GNU_GETTEXT

AC_PROG_INTLTOOL

AC_SUBST(xkb_base)
AC_SUBST(xkb_rules_symlink)

AC_OUTPUT([ intl/Makefile po/Makefile.in m4/Makefile
Makefile
compat/Makefile
compiled/Makefile
geometry/Makefile
geometry/digital_vndr/Makefile
geometry/ibm_vndr/Makefile
geometry/sgi_vndr/Makefile
keycodes/Makefile
keycodes/digital_vndr/Makefile
keycodes/sgi_vndr/Makefile
keymap/Makefile
keymap/digital_vndr/Makefile
keymap/sgi_vndr/Makefile
keymap/sun_vndr/Makefile
semantics/Makefile
rules/Makefile
symbols/Makefile
symbols/digital_vndr/Makefile
symbols/fujitsu_vndr/Makefile
symbols/hp_vndr/Makefile
symbols/macintosh_vndr/Makefile
symbols/nec_vndr/Makefile
symbols/sgi_vndr/Makefile
symbols/sony_vndr/Makefile
symbols/sun_vndr/Makefile
symbols/xfree68_vndr/Makefile
types/Makefile
xkeyboard-config.spec
docs/Makefile
])

