compat_DATA = \
accessx basic complete \
default group_led iso9995 \
japan keypad leds \
misc mousekeys norepeat \
pc pc98 xfree86 \
xtest README
                                                                                          
EXTRA_DIST= $(compat_DATA)
                                                                                          
compatdir = $(xkb_base)/compat


