compat_DATA = \
accessx basic complete \
default iso9995 \
japan keypad ledcaps \
lednum ledscroll \
misc mousekeys norepeat \
pc pc98 xfree86 \
xtest README
                                                                                          
EXTRA_DIST= $(compat_DATA)
                                                                                          
compatdir = $(xkb_base)/compat


