SUBDIRS = digital.vndr  ibm.vndr  sgi.vndr

geom_DATA = \
amiga ataritt chicony \
dell everex fujitsu \
hp keytronic kinesis \
macintosh microsoft nec \
northgate pc sony \
sun winbook README

EXTRA_DIST= $(geom_DATA)
                                                                                          
geomdir = $(xkb_base)/geometry


