SUBDIRS = digital.vndr sgi.vndr

kc_DATA = \
aliases amiga ataritt \
fujitsu hp ibm \
macintosh powerpcps2 sony \
sun xfree86 xfree98 \
README
                                                                                          
EXTRA_DIST= $(kc_DATA)
                                                                                          
kcdir = $(xkb_base)/keycodes


