SUBDIRS = digital_vndr sgi_vndr sun_vndr

km_DATA = \
amiga ataritt macintosh \
sony xfree86 xfree98 \
README
                                                                                          
EXTRA_DIST= $(km_DATA)
                                                                                          
kmdir = $(xkb_base)/keymap
