SUBDIRS = digital_vndr fujitsu_vndr hp_vndr macintosh_vndr nec_vndr sgi_vndr sony_vndr sun_vndr xfree68_vndr

symbolsdir = $(xkb_base)/symbols
dist_symbols_DATA = \
al am ara \
az be bd \
bg br ba \
bt by ca \
ch cs cz \
de dk ee \
es fi fo \
fr gb ge \
gr hr hu \
ie il in \
ir is it \
jp kg la \
latam latin lk \
lt lv mao \
mk mm mn \
mt mv nl \
no pc pk \
pl pt ro \
ru se si \
sk sy th \
tj tr ua \
us uz vn \
altwin capslock compose ctrl group inet keypad level3 srvr_ctrl \
eurosign
                                                                                          
include $(top_srcdir)/xkbrules.am
