SUBDIRS = digital_vndr fujitsu_vndr hp_vndr macintosh_vndr nec_vndr sgi_vndr sony_vndr sun_vndr xfree68_vndr

symbolsdir = $(xkb_base)/symbols
dist_symbols_DATA = \
ad af al am ara \
az be bd \
bg br ba \
bt by ca cd \
ch cs cz \
de dk ee \
es epo fi fo \
fr gb ge gh \
gr hr hu \
ie il in iq \
ir is it \
jp kg kh kr kz la \
latam latin lk \
lt lv mao \
mk mm mn \
mt mv ng nl \
no np pc pk \
pl pt ro \
ru se si \
sk sy th \
tj tr ua \
us uz vn \
za \
altwin capslock compose ctrl group inet keypad level3 level5 nbsp srvr_ctrl \
eurosign
                                                                                          
include $(top_srcdir)/xkbrules.am
