km_DATA = \
be bg ca \
cz cz_qwerty de \
de_CH dk dvorak \
en_US es fi \
fr fr_CH gb \
hu it jp \
no pl pt \
ru se sk \
sk_qwerty th us
                                                                                          
EXTRA_DIST= $(km_DATA)
                                                                                          
kmdir = $(xkb_base)/keymap/sgi.vndr
