km_DATA = \
be bg ca \
ch cz de \
dk dvorak \
es fi \
fr gb \
hu it jp \
no pl pt \
ru se sk \
th us
                                                                                          
EXTRA_DIST= $(km_DATA)
                                                                                          
kmdir = $(xkb_base)/keymap/sgi_vndr
